# EasyMarkdown

./: .gitignore  LICENSE.md  README.md  index.html  package-lock.json  package.json  vite.config.js  warp_log.txt
scripts/: build-msix.ps1
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
