[package]
name = "easymd"
version = "0.1.0"
description = "A lightweight, cross-platform Markdown viewer"
authors = []
edition = "2021"

# The lib name must be unique so it doesn't collide with the binary name,
# especially during cross-platform / universal builds.
[lib]
name = "easymd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
